# X-TG-rust

./: .gitignore  Cargo.toml  启动XTG.bat
crates/app/: Cargo.toml
crates/app/src/: app.rs  fonts.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/tg-bridge/: Cargo.toml
crates/tg-bridge/src/: lib.rs  peer_resolve.rs
crates/x-session/: Cargo.toml
crates/x-session/src/: api.rs  lib.rs
crates/xtg-server/: Cargo.toml
crates/xtg-server/src/: main.rs
crates/xtg-server/static/: index.html
crates/xtg-server/static/assets/: index-BMDgZC_Z.css  index-CBnoPzsk.js  index-CNcqTmaV.js  index-S1sOKd2n.css
crates/xtg-service/: Cargo.toml
crates/xtg-service/src/: command_state.rs  lib.rs  paths.rs  pipeline.rs  service.rs  settings.rs  state.rs  tg_commands.rs  translate.rs
docs/: DEPLOY.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.vue  api.ts  types.ts
