[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tg-bridge",
    "crates/media",
    "crates/x-session",
    "crates/xtg-service",
    "crates/app",
    "crates/xtg-server",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

grammers-client = "0.9"
grammers-session = "0.9"
grammers-mtsender = "0.9"
grammers-tl-types = "0.9"

# 同时启用 wgpu：默认渲染器为 Wgpu（DX12/Vulkan），避免仅 glow 时在无 OpenGL2 的机器上无法启动
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"

axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
