[package]
name = "xtg-x-session"
version = "0.1.0"
edition.workspace = true

[dependencies]
xtg-core = { path = "../core" }
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
urlencoding = "2"
chrono.workspace = true
