[package]
name = "xtg-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "xtg-server"
path = "src/main.rs"

[dependencies]
xtg-service = { path = "../xtg-service" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
